# ray_tracing

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Image.cpp  Image.h  Inputs.cpp  Inputs.h  JSON.cpp  JSON.h  Quaternion.cpp  Quaternion.h  Render.cpp  Render.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  cornellBoxScene.json  cornellBoxScene2.json  main.cpp  multithreadingFunc.cpp  multithreadingFunc.h  scene.json  scene2.json
